--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	
 		<!--<script src="lib/d3.js"></script>-->
 		<script src="lib/topojson.js"></script>
-		<script src="lib/queue.js"></script>
-		
+		<!--<script src="lib/queue.js"></script>-->
+		<script src="http://d3js.org/queue.v1.min.js"></script>		
 </head>
 
 <body>
